# rosalind

./: .gitignore  CMakeLists.txt  README.md
include/rosalind_bootstrap/: error_codes.h  function_decl.h  parser.h
src/bootstrap/: main.c  parser_internal.h  rcc_scanner_complete_token_identifier.c  rcc_scanner_complete_token_keyword_AND.c  rcc_scanner_complete_token_keyword_A_STAR.c  rcc_scanner_complete_token_keyword_BEGIN.c  rcc_scanner_complete_token_keyword_CONST.c  rcc_scanner_complete_token_keyword_C_STAR.c  rcc_scanner_complete_token_keyword_DIV.c  rcc_scanner_complete_token_keyword_D_STAR.c  rcc_scanner_complete_token_keyword_END.c  rcc_scanner_complete_token_keyword_E_STAR.c  rcc_scanner_complete_token_keyword_FUNCTION.c  rcc_scanner_complete_token_keyword_F_STAR.c  rcc_scanner_complete_token_keyword_GOTO.c  rcc_scanner_complete_token_keyword_HIDE.c  rcc_scanner_complete_token_keyword_I_STAR.c  rcc_scanner_complete_token_keyword_MODULE.c  rcc_scanner_complete_token_keyword_M_STAR.c  rcc_scanner_complete_token_keyword_NOT.c  rcc_scanner_complete_token_keyword_N_STAR.c  rcc_scanner_complete_token_keyword_OPAQUE.c  rcc_scanner_complete_token_keyword_O_STAR.c  rcc_scanner_complete_token_keyword_P_STAR.c  rcc_scanner_complete_token_keyword_R_STAR.c  rcc_scanner_complete_token_keyword_S_STAR.c  rcc_scanner_complete_token_keyword_T_STAR.c  rcc_scanner_complete_token_keyword_UINT.c  rcc_scanner_complete_token_keyword_VAR.c  rcc_scanner_complete_token_keyword_W_STAR.c  rcc_scanner_complete_token_keyword_XOR.c  rcc_scanner_complete_token_number.c  rcc_scanner_complete_token_relational.c  rcc_scanner_create.c  (+35 more)
(+2 files in other folders)
